pin occt to 7.6.3

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,7 +41,7 @@ outputs:
         - libblas
         - liblapack
         - gmp  # [not win]
-        - occt
+        - occt =7.6.3
         - fltk
         - libpng
         - libjpeg-turbo
