--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,7 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 MACOSX_SDK_VERSION:
-- '10.12'
+- '10.13'
 c_compiler:
 - clang
 c_compiler_version:
@@ -11,7 +11,7 @@ cairo:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- adrianinsaval main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
