--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,5 @@
 build_platform:
   linux_aarch64: linux_64
-  linux_ppc64le: linux_64
   osx_arm64: osx_64
 conda_build:
   pkg_format: '2'
@@ -9,3 +8,7 @@ github:
   branch_name: main
   tooling_branch_name: main
 test_on_native_only: true
+provider:
+  linux: github_actions
+  osx: github_actions
+  win: github_actions
