--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,4 @@
 MACOSX_SDK_VERSION:  # [osx and x86_64]
-  - 10.12            # [osx and x86_64]
+  - 10.13            # [osx and x86_64]
+channel_targets:
+- adrianinsaval main
