--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -13,7 +13,7 @@ cdt_name:
 channel_sources:
 - conda-forge
 channel_targets:
-- adrianinsaval main
+- freecad main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
