--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -11,7 +11,7 @@ cairo:
 channel_sources:
 - conda-forge
 channel_targets:
-- adrianinsaval main
+- freecad main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
