--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,7 +1,12 @@
 build_platform:
   linux_aarch64: linux_64
-  linux_ppc64le: linux_64
-  osx_arm64: osx_64
+  osx_arm64: osx_arm64
+provider:
+  win: github_actions
+  linux_64: github_actions
+  linux_aarch64: github_actions
+  osx_64: github_actions
+  osx_arm64: github_actions
 conda_build:
   pkg_format: '2'
 conda_forge_output_validation: true
