--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -15,7 +15,7 @@ cairo:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- freecad main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -33,7 +33,7 @@ libpng:
 macos_machine:
 - arm64-apple-darwin20.0.0
 occt:
-- 7.8.1
+- 7.7.2
 pin_run_as_build:
   occt:
     max_pin: x.x
