--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -7,7 +7,7 @@ cairo:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- freecad main
 cxx_compiler:
 - vs2019
 libblas:
@@ -19,7 +19,7 @@ liblapack:
 libpng:
 - '1.6'
 occt:
-- 7.8.1
+- 7.7.2
 pin_run_as_build:
   occt:
     max_pin: x.x
